Fixed scroll on mobile view

--- a/src/app/workshops/workshop2/page.css
+++ b/src/app/workshops/workshop2/page.css
@@ -1,18 +1,3 @@
-.row{
-        display: flex;
-        gap: 1rem;
-        flex-direction: row;
-        animation: scroll-left 30s linear infinite; 
-        width: max-content; 
-        }
-.row img{
-            width: 20%;
-            height: auto;
-        }
-.row:hover {
-            animation-play-state: paused;
-        }
-
 @media (min-width: 990px) {
 .workshop1-page{
         width: 100%;
@@ -226,27 +211,95 @@
         margin-top: 2rem;
         text-align: center;
     }
+    .content-cont{
+        width: 90%;
+        display: block;
+        margin: auto;
+    }
+
     .intro{
         background-color: #f3f3f3;
         color: var(--primary-color);
-        font-size: 1rem;
-        font-weight: 600;
+        font-weight: 400;
+        font-size: 1.5rem;
         height: auto;
         padding: 1rem;
         margin: 1rem auto;
         border-radius: 10px;
         text-align: center;
     }
+    .rcimg.abt.second{
+        background-color: #f3f3f3;
+        color: var(--primary-color);
+        font-weight: 400;
+        font-size: 1.5rem;
+        height: auto;
+        padding: 1rem;
+        margin: 1rem auto;
+        border-radius: 10px;
+        text-align: center;
+    }
+    .rcimg.abt.second p{
+        font-weight: 400;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+    }
+    .main-image {
+        position: relative;
+        width: 100%;
+        height: auto;
+        /* display: block; */
+        border-radius: 0;
+        box-shadow: none;
+    }
     .rcimg.abt.wrk{
         width: 100%;
         /* background-color: red; */
     }
+
     .rcimg.abt.wrk img{
-        width: 95%;
+        width: 100%;
         box-shadow: none;
         height: auto;
         margin: auto;
         display: block;
+        border-radius: 0;
+    }
+    .pictorials {
+        overflow-x: auto;
+        white-space: nowrap;
+        scroll-behavior: smooth;
+        }
+
+    .scrolling-track {
+        display: inline-flex;
+        animation: auto-scroll 60s linear infinite;
+        gap: 1rem;
+    }
+
+    .pictorials:hover .scrolling-track {
+        animation-play-state: paused;
+    }
+    .scrolling-img {
+        width: 19.75rem !important;
+        height: auto !important;
+        object-fit: cover;
+        flex-shrink: 0;
+    }
+    .row img:hover {
+        transform: scale(1.01);
+        cursor: pointer;
+        transition: transform 0.3s ease;
+    }
+
+
+    @keyframes scroll-left {
+        0% {
+            transform: translateX(0%);
+        }
+        100% {
+            transform: translateX(-90%);
+        }
     }
 
     .socials{
@@ -262,5 +315,4 @@
         width: 30px;
         height: auto;
     }
-
 }
